# nuclear-plant-multiagent-simulator

./: .dockerignore  .env.example  .gitignore  Dockerfile.llm_proxy  Dockerfile.simulator  LICENSE  Makefile  README.md  SYSTEM_DESCRIPTION.md  docker-compose.yaml  pyproject.toml  replay_benchmark.py
configs/: config.openai_test.yaml  config.yaml  mock_human_default.yaml  policy_matrix.yaml
configs/prompts/: ao.txt  ro.txt  sro.txt  sta.txt  to.txt
docs/: README.md
docs/eng/: 01_quickstart.md  02_running_the_system.md  03_attack_guide.md  04_configuration_guide.md  05_result_analysis.md  06_troubleshooting.md  07_test_scenario_catalog.md  08_benchmark_replay.md  README.md
docs/kor/: 01_빠른시작.md  02_시스템_실행하기.md  03_어택가이드.md  04_설정가이드.md  05_결과분석.md  06_트러블슈팅.md  07_테스트_시나리오_카탈로그.md  README.md
examples/: README.md  attack_agent_demo.py
llm_proxy/: allowlist.yaml  proxy.py
scenarios/: loca_small.yaml  normal_baseline.yaml  sbo_v1.yaml  sgtr_v1.yaml
src/: config_models.py  enums.py  main.py  message_bus.py  message_models.py  orchestrator.py  plant_state.py
src/agents/: base.py  factory.py  llm_client.py
src/guardrails/: base.py  derivation.py  g0_baseline.py  g10_doc_lock.py  g1_classifier.py  g2_policy.py  g3_two_person.py  g4_sta_veto.py  g5_provenance.py  g6_procedure.py  g7_disclosure.py  g8_bypass_lock.py  g9_rate_limit.py  stack.py
src/ingress/: api.py  session.py  summary.py
tests/: test_accident_scenarios.py  test_derivation.py  test_guardrails.py  test_logging_and_report.py  test_message_bus.py  test_plant_simulator.py  test_session.py
(+12 files in other folders)
