[project]
name = "nuclear-redteam-sim"
version = "0.1.0"
description = "Closed multi-agent NPP control simulation for LLM agent red-teaming"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anyio>=4.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
nrt-sim = "src.main:cli_entry"
nrt-report = "src.report.__main__:cli_entry"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "llm_proxy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101", "S104"]  # allow assert in tests, allow 0.0.0.0 bind for containers

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
